
- FPM:
  . Fixed bug #80024 (Duplication of info about inherited socket after pool
    removing). (Jakub Zelenka)

- FTP:
  . Fixed bug #80880 (SSL_read on shutdown, ftp/proc_open). (cmb, Jakub
    Zelenka)

- LibXML:
  . Fixed bug #73533 (Invalid memory access in php_libxml_xmlCheckUTF8). (cmb)

- PDO_ODBC:
  . Fixed bug #80783 (PDO ODBC truncates BLOB records at every 256th byte).
    (cmb)

- Session:
  . Fixed bug #80889 (Cannot set save handler when save_handler is invalid).
    (cmb)

- SOAP:
  . Fixed bug #69668 (SOAP special XML characters in namespace URIs not
    encoded). (cmb)

- Standard:
  . Fixed bug #80915 (Taking a reference to $_SERVER hides its values from
    phpinfo()). (Rowan Tommins)

01 Apr 2021, PHP 7.4.17

- Core:
  . Fixed bug #80781 (Error handler that throws ErrorException infinite loop).
    (Nikita)
  . Fixed bug #75776 (Flushing streams with compression filter is broken). (cmb)

- Dba:
  . Fixed bug #80817 (dba_popen() may cause segfault during RSHUTDOWN). (cmb)

- Intl:
  . Fixed bug #80763 (msgfmt_format() does not accept DateTime references).
    (cmb)

- Libxml:
  . Fixed bug #51903 (simplexml_load_file() doesn't use HTTP headers). (cmb)

- MySQLnd:
  . Fixed bug #80713 (SegFault when disabling ATTR_EMULATE_PREPARES and
    MySQL 8.0). (Nikita)
  . Fixed bug #80837 (Calling stmt_store_result after fetch doesn't throw an
    error). (Kamil Tekiela)

- opcache:
  . Fixed bug #80805 (create simple class and get error in opcache.so). (Nikita)

- PCRE:
  . Fixed bug #80866 (preg_split ignores limit flag when pattern with \K has
    0-width fullstring match). (Kamil Tekiela)

- phpdbg:
  . Fixed bug #80757 (Exit code is 0 when could not open file). (Felipe)

- Session:
  . Fixed bug #80774 (session_name() problem with backslash). (cmb)

- Standard:
  . Fixed bug #80771 (phpinfo(INFO_CREDITS) displays nothing in CLI). (cmb)
  . Fixed bug #78719 (http wrapper silently ignores long Location headers).
    (cmb)