@@ -25,6 +25,10 @@ PHP                                                                        NEWS
   . Fixed bug #80783 (PDO ODBC truncates BLOB records at every 256th byte).
     (cmb)
 
+- PDO_pgsql:
+  . Fixed bug #80892 (PDO::PARAM_INT is treated the same as PDO::PARAM_STR).
+    (Matteo)
+
 - Session:
   . Fixed bug #80889 (Cannot set save handler when save_handler is invalid).
     (cmb)
